<resources>
    <string name="app_name">Medical Care</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_choice">Preference</string>
    <string name="title_activity_reg_user">Sign up User</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="verification_code">Verification Code</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="get_code">Get Code</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="speciality_array">
        <item>Cardiology</item>
        <item>Dental</item>
        <item>Dermatology</item>
        <item>Medicine</item>
        <item>Gastroenterology</item>
        <item>Orthopaedics</item>
    </string-array>
    <string-array name="days_array">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string name="instant_validation">(instant validation)</string>
    <string name="title_activity_reg_doctor">Sign up Doctor</string>
    <string name="degree_other_specification"><![CDATA[Degree & Other Specification]]></string>
    <string name="designation">Designation</string>
    <string name="speciality">Speciality</string>
    <string name="bmdc_registration_number">BMDC Registration Number</string>
    <string name="description_professional_statement">Description (professional statement)</string>
    <string name="title_activity_reg_diagnostics">Sign up Diagnostics</string>
    <string name="drag_registration_number">Drag Registration Number</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_user">User Menu</string>
    <string name="title_activity_appointment">Doctor Appointment</string>
    <string name="select_doctor">Doctor</string>
    <string name="pick_date">Pick Date</string>
    <string name="type">Type</string>
    <string name="returning_visit">Returning Visit</string>
    <string name="new_visit">New Visit</string>
    <string name="pick_end_time">Pick End Time</string>
    <string name="pick_start_time">Pick Start Time</string>
    <string name="if_you_really_want_to_take_appointment_please_send_your_fee_to_017xxxxxxxx_and_send_your_transaction_id">If you really want to take appointment please send your fee to 017XXXXXXXX and send your transaction id</string>
    <string name="title_activity_splash">Splash Screen</string>
    <string name="title_activity_doctor">Doctor</string>
    <string name="title_activity_set_schedule">Set Schedule</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="days">Days</string>
    <string name="slot_1">Slot 1</string>
    <string name="slot_2">Slot 2</string>
    <string name="slot_3">Slot 3</string>
    <string name="title_activity_pick_time">Pick Time</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="pick_time">Pick Time</string>
    <string name="title_activity_department">Departments</string>
    <string name="title_activity_doctor_list">Doctor List</string>
    <string name="title_activity_doctor_details">Doctor Details</string>
    <string name="description">Description</string>
    <string name="degree">Degree</string>
    <string name="user">user</string>
    <string name="appointment">Appointment</string>
    <string name="title_activity_new_login">Sign in</string>
</resources>
